# xlsx_updater

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt  scratch_workbook.ipynb  tox.ini
src/: amend_annotation.py  analyze_formulas.py  main.py  quality_check.py  trim_xlsx.py  upsert_claims.py
src/lib/: formula.py  meta_annotation.py  utils.py  xlsx.py
tests/input/csv/: claims_mapping.csv
tests/input/xlsx/: Meat Alternatives - Vegan Jerky.xlsx  [No Kit] - Original American Cookies with Malt Extract.xlsx  [No Kit] - Savoury Biscuits with Malt Extract.xlsx  [No Kit] Original American Cookies with Malt Extract.xlsx  [No Kit] Savoury Biscuits with Malt Extract.xlsx
tests/src/: test_amend_anno.py  test_analyze_formulas.py  test_main.py  test_quality_check.py  test_upsert_claims.py
tests/src/lib/: skip_test_meta_annotation.py  test_formula.py  test_utils.py  test_xlsx.py
