[project]
name = "file_postprocessor"
version = "0.1.0"
readme = "README.md"
description = "File post processor prototype"
requires-python = ">=3.9"
authors = [
    { name = "John Chen", email = "john@potion.ai" }
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[project.urls]
"Homepage" = "https://github.com/potion-ai/annotation_work"
"Bug Tracker" = "https://github.com/potion-ai/annotation_work/issues"